# metal-snake

./: Cargo.toml  README.md  environment.yaml  pyproject.toml
bat/: lib.py
bat/metal_snake/: __init__.py  lib.py
bat/metal_snake/tests/: lib_test.py  rust_test.py
bat/tests/: lib_test.py
src/: lib.rs  python_module.rs  tests.rs
