[package]
name = "metal-snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bat"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "bat.metal_snake.rust"

[dependencies]
pyo3 = { version = "*", features = ["extension-module"] }
thiserror = "*"
num-bigint = "*"
